<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/comida2"
    tools:layout_editor_absoluteY="56dp">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="100dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:background="@color/colorTexto"
                android:ems="10"
                android:hint="@string/Id"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/buscar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:background="@color/colorguardar"
                android:ems="10"
                android:onClick="OnClick"
                android:text="@string/Buscar"
                android:textSize="18sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/Titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="2"
            android:background="@color/colorTexto"
            android:ems="10"
            android:hint="@string/titulo"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/Ingredientes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="8"
            android:autofillHints=""
            android:background="@color/colorTexto"
            android:ems="10"
            android:hint="@string/Ingredientes"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/Elaboracion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="10"
            android:background="@color/colorTexto"
            android:ems="10"
            android:hint="@string/Elaboracion"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/eliminar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="0.5"
            android:background="@color/colorguardar"
            android:onClick="OnClick"
            android:text="@string/Eliminar" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>