<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/comida2"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4" />


        <Button
            android:id="@+id/crear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@drawable/botones"
            android:onClick="cambioPantalla"
            android:text="@string/crear" />

        <Button
            android:id="@+id/buscar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@drawable/botones"
            android:onClick="cambioPantalla"
            android:text="@string/Buscar" />

        <Button
            android:id="@+id/consultarLista"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@drawable/botones"
            android:onClick="cambioPantalla"
            android:text="@string/recetario" />


        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>